--- a/scripts/utils/prpcServiceUtils.properties
+++ b/scripts/utils/prpcServiceUtils.properties
@@ -22,7 +22,7 @@ pega.rest.proxy.workstation=
 # Response type. Accepted values are xml and json.
 pega.rest.response.type=json
 #If you do not set the user temp directory to a valid directory, the Pega 7 Platform will use the default temp directory.
-user.temp.dir=C:/pega_temp
+#user.temp.dir=C:/pega_temp
 
 ############################### SETTINGS FOR EXPORT TOOL ##########################
 ###################################################################################
